// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applies \`background\` prop correctly 1`] = `
<div
  style={
    Object {
      "backgroundColor": "pink",
    }
  }
>
  <div />
</div>
`;

exports[`renders correctly 1`] = `
<div
  style={
    Object {
      "backgroundColor": "white",
    }
  }
>
  <div />
</div>
`;
